[tool.black]
include = '\.pyi?$'

exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | env
    | _build
    | buck-out
    | build
    | dist
  )/
  | some_ignored_file.py  # also separately exclude a file named foo.py in
                          # the root of the project
)
'''

[tool.poetry]
name = "django-openipam"
version = "0.9.0"
description = "Openipam Django/Web frontent"
authors = ["Jay McEntire <jay.mcentire@usu.edu>"]
package-mode = false

[tool.poetry.dependencies]
python = "3.9.21"
Django = "1.11.29"
beautifulsoup4 = "4.8.2"
django-admin-tools = "0.9.0"
django-auth-ldap = "2.1.0"
django-autocomplete-light = "2.3.3"
django-bower = "5.2.0"
django-braces = "1.14.0"
django-cas-ng = "3.6.0"
django-crispy-forms = "1.9.0"
django-debug-toolbar = "2.2.1"
django-extensions = "2.2.8"
django-filter = "2.2.0"
django-guardian = "1.5.1"
django-netfields = "1.2.2"
django-nvd3 = "0.9.7"
django-pglocks = "1.0.4"
django-qsstats-magic = "1.1.0"
django-taggit = "1.2.0"
django-widget-tweaks = "1.4.5"
djangorestframework = "3.11.0"
djangorestframework-csv = "2.1.0"
djangorestframework-jwt = "1.11.0"
djorm-ext-pgfulltext = "0.10"
drf-compound-fields = "2.0.0"
duo-web = "1.3.0"
peewee = "3.13.1"
python-dateutil = "2.6.1"
six = "1.14.0"
sentry-sdk = "^1.22.2"
pysaml2 = "^7.4.1"
black = "^23.11.0"
pre-commit = "^3.5.0"

[tool.poetry.dev-dependencies]
black = "^23.11.0"
psycopg2-binary = "2.8.6"
pre-commit = "^3.5.0"
pylint = "^2.4.4"
ipython = "^7.14.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
